--- a/source/_posts/重拾荒废一年的博客.md
+++ b/source/_posts/重拾荒废一年的博客.md
@@ -5,11 +5,8 @@ tags: 随笔
 ---
 
 我想起那天夕阳下的奔跑，那是我逝去的青春~
-
-那天，一个怀揣着满腔抱负的青年步入了大学的殿堂。高中时代兴趣使然耍过一段时间linux。升入大学后，搭博客，建论坛（稍有起色之时以被辅导员魔兽电脑而告终~(惋惜一秒钟)）耍过wordpress，撸过dede，每天玩的不亦乐乎，就像捡贝壳的少年一样每天都很充实。
-
+那天，一个怀揣着满腔抱负的青年步入了大学的殿堂。高中时代兴趣使然耍过一段时间linux。升入大学后，搭博客，建论坛（稍有起色之时以被辅导员没收电脑而告终~(惋惜一秒钟)）耍过wordpress，撸过dede，每天玩的不亦乐乎，就像捡贝壳的少年一样每天都很充实。
 然而由于毅力不足，开始了与小伙伴们日夜lol的生活，整日浑浑噩噩。也许是缘分吧，很庆幸大三一位老师看中了我，愿意带着我做项目，由于以前搞过一些网站，再加上前端所见即所得的特性深深吸引着我，我便负责了前端部分，项目主要是给政府做后台管理系统，在老师的指导下，慢慢开始系统的学习html+css+bootstrap和一点js，由此，奠定了我前端的职业生涯。
-
 还未毕业便拿到了一份当时看起来不错的offer，于是又松散了下来。来到北京后方知天大地大。恨不得穿越回去打自己几巴掌。期间由于各方面因素想结束这北漂的生活，所幸我的leader又接受了我，感激之情难以言表。...每一种经历都是一种成长。
 
 既然出来漂，就得漂出个样子！
