--- a/source/_posts/2018-03-23周记.md
+++ b/source/_posts/2018-03-23周记.md
@@ -29,10 +29,10 @@ tags:
 **mac真好用！！**！作为一个六年的win粉（第一个论坛名字就叫winlover，可见对win爱之深），短短两周，就让我移情别恋。。。也许是好久没耍linux，找到了中学时代那种感觉（那个时候我还是一个单纯青涩的少年~当然现在也是）
 
 ## bug总结及解决办法
-+ ajax发送请求，返回状态码200，却跳到error函数。  
++ **ajax发送请求，返回状态码200，却跳到error函数。**  
 &emsp;&emsp;百思不得其解，接收到响应头是跳到银行报错页。问后台他那边正常他说正常，态度很强硬，就是不觉得他那边有问题。。。无奈，我这边更换格式json改成text各种试都于事无补。哇，响应回来内容是报错我前端能有什么办法。过了一下午屁颠屁颠跑过来说服务器部署有问题。我：。。。(你伤害了我，还一笑而过~
-+ 测试所提之微信浏览器不让上下滑动  
-&emsp;&emsp;emmm...这不为难人吗。测试诚心诚意给你提了，你能不大发慈悲满足她吗？  
++ **测试所提之微信浏览器不让上下滑动**  
+&emsp;&emsp;emmm...这不为难人吗。不过人家测试诚心诚意给你提了，你能不大发慈悲满足她吗？  
 &emsp;&emsp;那就想呗...想到阻止默认事件，然而。。。给body添加e.preventDefault()里面的内容就不能划了  
 ![](https://upload-images.jianshu.io/upload_images/11264410-139acafebc29b1bc.jpeg)  
 &emsp;&emsp;当然最后还是解决了，安卓有问题，估计得看源码了。具体解决方法下周另开一篇，为了SEO（滑稽.jpg）
