--- a/source/_posts/是时候写点自己的轮子了，虽然简单.md
+++ b/source/_posts/是时候写点自己的轮子了，虽然简单.md
@@ -1,7 +1,10 @@
 ---
 title: 是时候写点自己的轮子了，虽然简单
 date: 2018-04-24 18:26:41
-tags: 随笔
+tags: 
+- 随笔
+- js
+- wheels
 ---
 
 由于支付宝规定没logo不让上线，而传统的select中option只能添加背景色，不能添加背景图，无奈只好自己写一个，写完之后便产生了一种为何不将自己写过的可能会重用的封装成组件呢。
