--- a/source/_posts/《算法神探》读书笔记.md
+++ b/source/_posts/《算法神探》读书笔记.md
@@ -3,3 +3,51 @@ title: 《算法神探》读书笔记
 date: 2018-05-17 17:52:47
 tags: 读书笔记
 ---
+
+因为住的离公司比较远，通勤时间平均不到两个小时，算上赶路排队换乘太挤等情况，大约会有半个多小时可以拿出手机的时间，正好最近每天业务繁重，每天11点到家，也就只有这点空闲时间，正好看会书
+
+最近看完了刘墉的《我不是教你诈》1234，5讲的是医生，所以就没看了。用几个所谓的“朋友”的故事来阐述我们应该怎么处理某一类事情，虽然有的故事有些生硬，为了讲故事而讲故事，但是看完收获还是很大的，有好几段都是自己亲身经历过的，要是早些年看到这几本书，可能当初那些事就不会那么尴尬了
+
+之前也看过一点《啊哈算法》和《大话数据结构》，都讲得不错，通俗易懂。偶然听说《算法神探》不错，而且只有200页，那就看看吧。于是花了有三星期吧，每天就看一会会，也不一定每天都能看。看完感觉还是有点浅了。但是对于非科班生来讲，强烈推荐！  
+
+书中每章都用形象的案例来解释数据结构和算法在我们日常生活中的作用，告诉读者，所谓的数据结构和算法，就在我们身边，每天都在用，下面来总结总结
+<!--more-->
+
+书中有介绍到的算法和数据结构有穷举搜索、数组、字符串、二分搜索、广度优先搜索、深度优先搜索、栈、队列、并行算法、迭代加深、逆向索引、二叉搜索树、trie树、最佳优先搜索、优先队列、启发式搜索、堆等
+
++ 穷举搜索
+  就是一个一个找，数据量小，毫无规律时可以使用这种方法，效率极其差（好比一副打乱的牌找一张，一个一个找呗）
++ 二分搜索
+  一分为二，对半缩小搜索范围。时间复杂度logn，对于庞大的基数来说，效率很高。
+  100000个数字中找出某一个数，50000->25000->12500->6250->3125->1562->781->390->195->97->48->24->12->6->3->1。显然，查找十万条数据中的某个数，也只需要我们都能数的过来的次数便可以找到，效率非常高
++ 数组
+  标记了下标（索引）的一组数据，好像门牌号
++ 字符串
+  一串字符
++ 栈
+  后进先出。什么叫后进先出呢，比如放盘子，最早放下去的肯定拿不出来，拿的都是最后放上去的（后进的先出来），这种数据结构有什么用呢，为什么要有这个数据结构？比如要反转字符串，很明显栈就是一个非常好的结构，还有一些其他的数学问题都可以用栈来很好的模拟
++ 队列
+  先进先出，这个很符合我们日常所遵循的规律，先来后到么。餐厅吃饭排队，银行取钱排队，先来的人先办完，先走。所以叫队列
++ 优先队列
+  跟最佳优先搜索结合起来，不管啥时候放进去的，只要他最符合条件，就先处理他
++ 广度优先搜索
+  按顺序依次尝试可能的搜索选项的算法，它每次都会选择尝试首先发现的但还没有尝试过的选项。跟上面的队列联系起来，每发现一个，就把他下面的所有可能放到队列末尾。
++ 深度优先搜索
+  优先考虑最近新遇到的搜索状态，它会沿着一条路往下走，直到遇到目标状态，或者是一条死路。跟上面的栈联系起来。走迷宫
++ 迭代加深
+  指定了深度的深度优先搜索
++ 并行算法
+  一分为几，分而治之，合并结果
++ 二叉树
+  想起了小时候玩扑克牌，不用调顺序，先放一个，然后比他大的放他右下角，比他小的放他左下角，依次这么放（递归） ，全部放完后，这就是一个二叉树
+  它的优势：搜索非常快，当数据量增加一倍时 ，整个树才增加了一层
++ trie树
+  二叉树上放的字符，图书馆的书就是这么排的，先按首字母分成几个区域，每个区域内还有柜子，每个柜子上写着第二个字母，柜子的每一行又有第三个字母，这样就很容易找到想要的书
++ 逆向索引
+  好像书最后的附录，也不能叫附录把，就是把关键的字都在多少页出现过给总结了一下，这样就能很快找到这个关键字
++ 启发式搜索
+  要出去买菜，知道东边有个菜市场，肯定先去东边呀
++ 堆
+  跟二叉树很像，但是同一层不一定按顺序，有可能下面一层的值比上面一层某一位置处的值还要大。但是二叉树时左边肯定小于右边的
+
+基本就这么多吧，还是很有收获的，发现看完之后生活中遇到个啥都会想到数据结构，比如最近很火的`萌犬便便便`，不就是一个很经典的二叉树吗，如果要合成15级的小狗，那么得需要2**14个1级小狗，我的天，玩这个游戏的人是有多闲。嘻嘻就写到这吧，下一本《图解http》走起
