--- a/source/_posts/两周都没有写了，每天加班到10点.md
+++ b/source/_posts/两周都没有写了，每天加班到10点.md
@@ -6,7 +6,7 @@ tags: 随笔
 
 最近真是加班加成狗，每天都累得到家倒头就睡，还有两天在椅子上坐着就睡着了，哎，生活不易
 
-<!--查看更多牢骚-->
+<!--more-->
 前段时间四个项目并行开发，到现在终于只剩一个了，但是，不怕神一样的敌人，就怕猪一样的队友。本来上周五下半天提测（也就是昨天），他那块总是有问题，他又不会。就来问我，结果慢慢的他竟然不管了，交给我了？？？，每天下班准时走。搞得我每天加班，没办法谁让他不会呢（不会学啊！！！），为了我们的项目啊，算了这种人不跟他一般见识，学到是自己的。推迟到下周二提测
 
 结果，就在昨天下班前，我突然发现，他开发竟然不看需求文档的？？？代码质量我就不说了，需求上写得清清楚楚的功能他都没有做，我。。。我给他打了个电话说明了一下问题，他说“那咋做啊，我觉得******巴拉巴拉”，就很服气，你不懂你跟需求讨论啊，我开发时每天都跟需求讨论，ui给的图不一定就是完美的啊，需求文档也是人写的，也会有漏子啊，需求也不懂代码，这种东西肯定要经过多方商讨才能大家都满意，你就按照自己想法来到时候功能改动哭的还不是自己？
