--- a/source/_posts/加班近一个月中问题的总结.md
+++ b/source/_posts/加班近一个月中问题的总结.md
@@ -1,5 +1,55 @@
 ---
-title: 加班近一个月中问题的总结
+title: 加班近一个月中问题的总结（一）-微信缓存篇
 date: 2018-06-19 13:33:23
 tags:
+- bug
+- js
 ---
+
+接了个大需求，一个多月来每天晚上到家12点，虽说累了点倒也充实，每天记录一点问题及解决思路，趁最近有点空总结复习一下
+
+首当其冲的就是微信的一大问题：**顽固的缓存**
+<!--more-->
+首先确认不生效到底是否是缓存的原因
+1. 借一个以前没有打开过或者好几天都没有打开过当前页面的手机，一看便知
+2. 换浏览器，但是有的登录内的页面还不能在浏览器上看
+3. 电脑哇，电脑上强制刷新，清空缓存并硬性重新加载  
+
+还得鉴定是否是由于兼容性所以不生效的问题，也简单，找一个一样的机型并且近几天没有打开过的  
+以上可以判断一切是否由缓存导致的问题
+
+**怎么解决呢**
+先列几个想到的解决方法吧
+**1.当然是自己的代码层面解决**
++ 设置meta标签，相当于设置http请求头cache-control，expires， pragma。。。**一点作用都没有！！**
++ ajax发送时请求体中加入 `cache: false`，也并没有什么卵用
++ 添加时间戳吧?t=123456的方式，添加时间戳，嗯！页面好像确实可以了，为什么接口获取到的数据还是以前的（后台也改bug了）？？？谁可以告诉我！！！
++ 请求体中也加入一个无意义的字段试试，vconsole发现确实是发过去了，但是为毛返回来的数据还是以前的！！！
+![](https://upload-images.jianshu.io/upload_images/11264410-139acafebc29b1bc.jpeg)
+
+我已经不知道说啥了，心累了，受伤了  
+突然灵光一现，诶？服务器那边不是也有控制缓存的么，让他控制一下如何，好主意
+结果询问得知，他那边设置的就是不缓存
+![](https://upload-images.jianshu.io/upload_images/11264410-2936b8a76d1c96f8.jpg)经历过绝望之后的笑容
+嘿，嘿嘿，嘿嘿嘿
+那算了，你给入口页加个时间戳吧，起码让首页不缓存
+
+**2.用户层面呢？**
++ 刷新(emmm...)
++ debugx5.qq.com
++ 取关，重新关注
++ 退出微信，重新登录
+
+感觉对于用户来讲，上面三个方法都不太可行
+1. 刷新能解决的话。。这个问题就不会被列在这了							×
+2. 用户来讲，好像不太现实												×
+3. 万一人家不关注了咋整，而且取关之后以前的历史记录都没了，也不太可行	×
+4. 所有需要用户来解决的问题，原则上来讲都不可行							×
+
+综上，全pass，谁来告诉我还有什么法子
+
+其实还有个终极办法，改名字。。。123.html改成456.html，虽然不合适，要是没办法解决就只能这样了呀，我们用的是gulp然后就去npm上找gulp-rev的用法
+就在这个时候，测试告诉我他那几个手机突然间全好了，可是这中间我们谁也没动代码和服务器啊
+![](https://upload-images.jianshu.io/upload_images/11264410-976edc7d762f3c43..jpg)
+发生了什么，难道是谁在幕后操控？？？
+完！
