--- a/source/_posts/加班近一个月中问题的总结（一）-微信缓存篇.md
+++ b/source/_posts/加班近一个月中问题的总结（一）-微信缓存篇.md
@@ -24,7 +24,7 @@ tags:
 + 设置meta标签，相当于设置http请求头cache-control，expires， pragma。。。**一点作用都没有！！**
 + ajax发送时请求体中加入 `cache: false`，也并没有什么卵用
 + 添加时间戳吧?t=123456的方式，添加时间戳，嗯！页面好像确实可以了，为什么接口获取到的数据还是以前的（后台也改bug了）？？？谁可以告诉我！！！
-+ 请求体中也加入一个无意义的字段试试，vconsole发现确实是发过去了，但是为毛返回来的数据还是以前的！！！
++ 请求体中也加入一个无意义的字段试试，vconsole发现确实是发过去了，但是为毛返回来的数据还是以前的！！！缓存就缓存为毛你能把接口也缓存住？？？
 ![](https://upload-images.jianshu.io/upload_images/11264410-139acafebc29b1bc.jpeg)
 
 我已经不知道说啥了，心累了，受伤了  
