--- a/source/_posts/经典布局之姓名-联系方式对齐.md
+++ b/source/_posts/经典布局之姓名-联系方式对齐.md
@@ -34,4 +34,4 @@ tags: css
 据大神讲：
 	一个div不设置高度，其高度是由line-height决定的，而line-height不设置的话他的值是normal！！！那么我们怎么知道他到底多高，这个就涉及到字体设计了，通过观察可以发现不同字体下，div计算出来的高度是不同的，而字体的设计有上部下部以及基线，当多行文本碰到f和g这种上下非常突出的单词时，就会挨得非常近，极其影响美观，所以设计师们在设计字体的时候都会自己定一个字体默认的行高和空格宽度，也就是说我们看到的空格和默认行高都是字体内部定义的。所以会出现font-size和height在不同设备下莫名波动的问题，所以最好看情况定高度和行高
 
-真的是豁然开膛
+真的是豁然开朗
