放上报工算法

--- a/source/_posts/闲谈前端之魅力所在.md
+++ b/source/_posts/闲谈前端之魅力所在.md
@@ -28,10 +28,33 @@ tags: 随笔
 退而求其次，先解决问题再说，细节先放下，动态规划这块以后要好好看看。得，重新理思路
 
 将m(8)平均分成n份，然后将结果去除小数点后一位之后的数字，然后将结果相加，再用8减去和，得到未分配工时，再随机分配这些！因为操作完之后这n项都是小数点后一位，所以得到的未分配工时肯定也是小数点后一位，每位上减去的数字都在小数点后两位，所以得到的未分配工时除以0.1肯定超不过n。，思路一旦理清，写起来就非常快了，原来上面那个思路花了一个多小时没写出来，这个只用了十几分钟。效果还相当不错。代码在公司电脑上，没有外网很烦，最大的一个问题就是，小数点精度问题！！！虽说可以通过判断a-b<0.00000001来判断a=b，但也未免太麻烦，直接所有数据乘10计算，得出的结果再除以10，完美的避免了精度这个坑，哈哈
+//到公司了，放上算法
+```javascript
+function create(m, n){
+    var arr = []
+    var item = parseInt((n/m) * 10)
+	var remain = (n * 10) - item * m
+    for(var i=0; i<m; i++){
+        arr[i] = item
+    }
+    while(remain > 0){
+        var round = (Math.random() * m) >> 0
+        arr[round] += 1
+        remain--
+    }
+    while(m > 0){
+        arr[(m--)-1] /= 10
+    }
+    return arr
+}
+getDOM()
+pushData()
+exec()
+```
 
 **然后第二点，获取dom，填充数据**
 
-不看不知道，不看下一跳，银行的这个页面哦，，里里外外嵌套了5个iframe，还有frameset，frame等等标签，还是用table布局。光是这也就算了，他每个格子所在的位置还都不一样，麻麻有人欺负我，不过这种就不是什么大问题，就是麻烦点嘛，不懈努力之下，终于完成了
+不看不知道，不看下一跳，银行的这个页面哦，，里里外外嵌套了5个iframe，还有frameset，frame等等标签，还是用table布局。光是这也就算了，他每个格子所在的位置还都不一样，麻麻有人欺负我!!!.不过这终究不是什么大问题，就是麻烦点嘛，不懈努力之下，终于完成了
 
 **完成之后干啥呢，当然是分享啦**
 看到自己可以帮助到这100多号人，当然是非！常！开！心！啦！！！哈哈哈哈哈哈哈哈哈
