--- a/source/_posts/节流与防抖.md
+++ b/source/_posts/节流与防抖.md
@@ -1,5 +1,38 @@
 ---
 title: 节流与防抖
 date: 2018-07-07 02:40:49
-tags:
+tags: js
 ---
+节流？拧小水流头节流嘛。防抖？啥玩意？这名字起的真的是...感觉还是主要用来onscroll啊mousemove，touchmove等等事件上的，还有搜索建议等等(不知道理解对不对)，开始码码
+<!--more-->
+节流嘛，就是降低频率，在规定时间内不得再次执行（技能cd...）,来看代码
+```javascript
+function throttle(fn, time){
+  let cd = false //技能可以使用
+  return function(...args){
+    if(cd){ return false} //如果cd中，没反应
+    fn.apply(undefined, args) // 放技能
+    cd = true // 技能已使用，cs中
+    setTimeout(() => {cd = false}, time) //冷却完毕
+  }
+}
+```
+比如onscroll的时候要执行一件事，onscroll执行频率是非常快的，当然也是非常消耗资源的。一般显示屏的刷新频率为是60hz，所以我们只需要让函数执行频率变为1000/60 ≈ 16.6，也就是16，显示器刷新之前就执行，这样就不会有卡顿的感觉，同时性能也会大大提高  
+------------------------
+然后来说说防抖，你妈让你出去菜，买回来了，又告诉你再去买袋盐，你又买回来了，接着又告诉你，家里燃气没了，快出去充，你。。。 什么感想  
+防抖大概就是这个意思（也不完全是这个意思），你尽管折腾，等你消停了（要是n秒之内你没有反应）我再去执行。这就是防抖  
+上代码
+```javascript
+function debounce(fn, time){
+  let timer
+  return function(...args){
+    if(timer){
+	  clearTimeout(timer)
+	}
+	timer = setTimeout(() => {
+	  fn.apply(undefined,args)
+	}, time)
+  }
+}
+```
+直接点的例子就是，懒加载下一页，总不能用户滚啊滚啊，你就不停的加载下一页吧，当然是用户停止滚动后，我们才去加载。还有就是搜索框模糊匹配，等用户输入停100ms再去发请求，这个应对高并发是非常有用的。
