--- a/source/_posts/加班近一个月中问题的总结（二）-剩余问题.md
+++ b/source/_posts/加班近一个月中问题的总结（二）-剩余问题.md
@@ -11,7 +11,7 @@ tags:
 好了继续说剩下的
 <!--more-->
 + IOS定位问题，IOS10以上不让非https的方式获取，低版本下navigator获取地理位置有问题，直接错误码1，定位服务不可用，换用百度地图api后可行，不知道百度做了什么优化，翻源码好像也没有什么特别的
-![](https://upload-images.jianshu.io/upload_images/11264410-ef20dbae7ec3e411.jpg)
+![](/images/11264410-ef20dbae7ec3e411.jpg)
 + 微信定位后会记住位置授权，需在系统设置里 `通用-设置-还原-还原位置与隐私` 中还原
 + IOS微信浏览器下方会有前进后退按钮，禁用方法
 ```javascript
