--- a/source/_posts/经典布局之姓名-联系方式对齐.md
+++ b/source/_posts/经典布局之姓名-联系方式对齐.md
@@ -5,7 +5,7 @@ tags: css
 ---
 
 今天逛知乎的时候看见了一个困扰已久的问题的解决办法，相信大家在初学的时候都碰到过表单对齐，像这种
-![](https://upload-images.jianshu.io/upload_images/11264410-49b429bfa9274346.png)
+![](/images/11264410-49b429bfa9274346.png)
 那个时候一贯地解决办法就是，加空格，定位等等(空格不同设备占位不同的问题下面有解释)但是总感觉定的不是很爽  
 <!--more-->
 其实可以利用`text-align`属性，`text-align: justify;`可以用来两端对齐，但是用的时候经常发现不生效是怎么回事呢。这个属性是针对多行文本的，因为一行文本两端对齐多丑啊，肯定不会这么设计的。  
