--- a/source/_posts/记一次找路由器密码的乌龙事件.md
+++ b/source/_posts/记一次找路由器密码的乌龙事件.md
@@ -6,14 +6,14 @@ tags: 随笔
 家里网快到期了，原来上家留下来的路由器太破了，准备换个路由器，可是不知道原来的账号密码怎么破，账号倒是好说，进路由器管理页账号就是明文的，密码呢。。。  
 
 前端工程师的好处就体现出来了，打开控制台选中密码的input元素，控制台$0.value，嘻嘻，出来了。。`HelloWorld123` 
-![](https://upload-images.jianshu.io/upload_images/11264410-7c296ad513e8c22a.jpg)  
+![](/images/11264410-7c296ad513e8c22a.jpg)  
 <!--more-->
 难道原来的小哥哥也是程序员？？？欣喜若狂告诉客厅的舍友密码是HelloWorld123/捂脸，然后我们就一直看着页面上的验证失败沉思......  
 
 “这他妈的假的？？”一句话打破了沉寂，算了，不换了，于是又把老路由器换上。。。
 
 十分钟后我突然想到，不对啊，难道不是无线设置里？进设置向导看看，一样的操作，果然这块的密码还像是个正常密码/再次捂脸，都怪自己一看见HelloWorld就被冲昏了头脑，不过tplink你为啥要弄个HelloWorld123糊弄人
-![](https://upload-images.jianshu.io/upload_images/11264410-139acafebc29b1bc.jpeg)
+![](/images/11264410-139acafebc29b1bc.jpeg)
 
 用了这么久vim了还是只会基本操作，一段时间不用就给忘了，每次忘了就重头看，第一章是越来越熟了，啥时候能翻两页
-![](https://upload-images.jianshu.io/upload_images/11264410-dcab9ab2ee4f3566.jpg)
+![](/images/11264410-dcab9ab2ee4f3566.jpg)
